Оптимизации + исправления + отображение треда в предварительном варианте

--- a/DvachBrowser3/Styles/Custom.xaml
+++ b/DvachBrowser3/Styles/Custom.xaml
@@ -11,40 +11,18 @@
     <Color x:Key="ContrastColor">White</Color>
     <SolidColorBrush x:Key="ContrastColorBrush" Color="{StaticResource ContrastColor}" />
 
-    <ControlTemplate x:Key="CleanListViewItemPresenterTemplate" TargetType="ListViewItem">
-        <ListViewItemPresenter
-            ContentTransitions="{TemplateBinding ContentTransitions}"
-            SelectionCheckMarkVisualEnabled="True"
-            CheckBrush="{ThemeResource SystemControlForegroundBaseMediumHighBrush}"
-            CheckBoxBrush="{ThemeResource SystemControlForegroundBaseMediumHighBrush}"
-            DragBackground="{ThemeResource ListViewItemDragBackgroundThemeBrush}"
-            DragForeground="{ThemeResource ListViewItemDragForegroundThemeBrush}"
-            FocusBorderBrush="{ThemeResource SystemControlForegroundAltHighBrush}"
-            FocusSecondaryBorderBrush="{ThemeResource SystemControlForegroundBaseHighBrush}"
-            PlaceholderBackground="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-            PointerOverBackground="Transparent"
-            PointerOverForeground="{ThemeResource SystemControlHighlightAltBaseHighBrush}"
-            SelectedBackground="{ThemeResource SystemControlHighlightListAccentLowBrush}"
-            SelectedForeground="{ThemeResource SystemControlHighlightAltBaseHighBrush}"
-            SelectedPointerOverBackground="{ThemeResource SystemControlHighlightListAccentMediumBrush}"
-            PressedBackground="Transparent"
-            SelectedPressedBackground="{ThemeResource SystemControlHighlightListAccentHighBrush}"
-            DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
-            DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
-            ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
-            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-            CheckMode="Inline">
-            <interactivity:Interaction.Behaviors>
-                <behaviors:CleanListContentMarginBehavior NarrowThickness="{StaticResource CleanListPaddingNarrow}" NormalThickness="{StaticResource CleanListPadding}" />
-            </interactivity:Interaction.Behaviors>
-        </ListViewItemPresenter>
-    </ControlTemplate>
-
     <Thickness x:Key="CleanListPaddingNarrow">0, 0, 0, 0</Thickness>
     <Thickness x:Key="CleanListPadding">0, 0, 12, 0</Thickness>
 
-
+    <ControlTemplate x:Key="CleanListItem" TargetType="ListViewItem">
+        <Border>
+            <interactivity:Interaction.Behaviors>
+                <behaviors:CleanListContentMarginBehavior NarrowThickness="{StaticResource CleanListPaddingNarrow}" NormalThickness="{StaticResource CleanListPadding}" />
+            </interactivity:Interaction.Behaviors>
+            <ContentPresenter HorizontalAlignment="Stretch" />
+        </Border>
+    </ControlTemplate>
+    
     <ResourceDictionary.ThemeDictionaries>
 
         <!--  RequestedTheme=Dark  -->
