--- a/DvachBrowser3/Views/BoardPage.xaml
+++ b/DvachBrowser3/Views/BoardPage.xaml
@@ -49,7 +49,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
-            <RowDefinition />
+            <RowDefinition Height="100*"/>
         </Grid.RowDefinitions>
 
         <!--  header  -->
@@ -60,10 +60,12 @@
             </interactivity:Interaction.Behaviors>
         </controls:PageHeader>
         <pa:ProgressIndicatorControl Grid.Row="1" ViewModel="{x:Bind ViewModel.Update.Progress, Mode=OneWay}" ShowMessage="True" />
-        <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}" ThreadTapped="MainList_OnThreadTapped" Margin="4, 4, 4, 0" ListTitle="{x:Bind ViewModel.TitleWithPage, Mode=OneWay}" /> 
+        <pa:BoardThreadRefList x:Name="MainList" Grid.Row="2" ViewModel="{x:Bind ViewModel.Page, Mode=OneWay}" ThreadTapped="MainList_OnThreadTapped" Margin="4, 4, 4, 0" 
+                               ListTitle="{x:Bind ViewModel.TitleWithPage, Mode=OneWay}"/> 
         <pa:ContentPopup Grid.Row="2" x:Name="ThreadPreviewPopup">
             <pa:ContentPopup.ViewContent>
-                <pa:PostCollectionView x:Name="ThreadPreview" MaxLines="20" ShowCounter="False" ShowPreviewSeparator="True" ShowFullThreadText="Перейти в тред" />
+                <pa:PostCollectionView x:Name="ThreadPreview" MaxLines="20" ShowCounter="False" ShowPreviewSeparator="True" ShowFullThreadText="Перейти в тред"
+                                       ShowFullThread="ThreadPreview_OnShowFullThread"/>
             </pa:ContentPopup.ViewContent>
         </pa:ContentPopup>
     </Grid>
