--- a/DvachBrowser3/Views/Partial/PostCollectionView.xaml
+++ b/DvachBrowser3/Views/Partial/PostCollectionView.xaml
@@ -6,6 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="using:DvachBrowser3.ViewModels"
+    xmlns:localBehaviors="using:DvachBrowser3.Behaviors"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
@@ -17,7 +19,7 @@
                 <Style TargetType="ListViewItem">
                     <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                     <Setter Property="Padding" Value="0" />
-                    <Setter Property="Template" Value="{StaticResource CleanListViewItemPresenterTemplate}" />
+                    <Setter Property="Template" Value="{StaticResource CleanListItem}" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
