--- a/DvachBrowser3/Views/ThreadPage.xaml
+++ b/DvachBrowser3/Views/ThreadPage.xaml
@@ -59,7 +59,7 @@
 
         <pa:ProgressIndicatorControl Grid.Row="1" ViewModel="{x:Bind PostCollection.Update.Progress, Mode=OneWay}" ShowMessage="True" />
 
-        <pa:PostCollectionView Grid.Row="2" Margin="4, 4, 4, 0" ViewModel="{x:Bind ViewModel, Mode=OneWay}" MaxLines="20" ShowCounter="True" ShowPreviewSeparator="False"
+        <pa:PostCollectionView Grid.Row="2" Margin="4, 4, 4, 0" ViewModel="{x:Bind ViewModel, Mode=OneWay}" MaxLines="20" ShowCounter="True" ShowPreviewSeparator="False" ShowFullPostButton="True"
                                x:Name="MainList">
         </pa:PostCollectionView>
     </Grid>
