--- a/DvachBrowser3/Views/Partial/PostView.xaml
+++ b/DvachBrowser3/Views/Partial/PostView.xaml
@@ -50,12 +50,7 @@
                 <Run Text="{x:Bind ViewModel.PostNumStr, Mode=OneWay}" />
                 <Run Text="{x:Bind ViewModel.Name.TripCode, Mode=OneWay}" />
             </TextBlock>
-            <StackPanel x:Name="PostFlagsView" Orientation="Horizontal" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" VerticalAlignment="Top">
-                <TextBlock Visibility="{x:Bind ShowCounter, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}"
-                    x:Name="CounterView" Margin="5, 0, 5, 0" Foreground="Green" FontWeight="SemiBold" FontSize="14.5"
-                    VerticalAlignment="Center">
-                    <Run>#</Run><Run Text="{x:Bind ViewModel.CounterStr, Mode=OneWay}" />
-                </TextBlock>
+            <StackPanel x:Name="PostFlagsView" Orientation="Horizontal" RelativePanel.AlignTopWithPanel="True" RelativePanel.AlignRightWithPanel="True" VerticalAlignment="Top" Margin="2, 0, 0, 0">
                 <Viewbox Height="16" Width="16" Visibility="{x:Bind ViewModel.Flags.Sage, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}" Margin="2"
                      ToolTipService.ToolTip="Сажа" VerticalAlignment="Center">
                     <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE1FD;" />
@@ -80,6 +75,11 @@
                      ToolTipService.ToolTip="Модтрип" VerticalAlignment="Center">
                     <FontIcon FontFamily="Segoe UI Symbol" Glyph="⚡" Height="32" Width="32" Margin="-7" />
                 </Viewbox>
+                <TextBlock Visibility="{x:Bind ShowCounter, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=false}"
+                    x:Name="CounterView" Margin="3, 0, 5, 0" Foreground="Green" FontWeight="SemiBold" FontSize="14.5"
+                    VerticalAlignment="Center">
+                    <Run>#</Run><Run Text="{x:Bind ViewModel.CounterStr, Mode=OneWay}" />
+                </TextBlock>
             </StackPanel>
         </RelativePanel>
         <TextBlock Grid.Row="1" Margin="3" Text="{x:Bind ViewModel.Subject, Mode=OneWay}" FontSize="{x:Bind TitleTextSize, Mode=OneWay}" TextWrapping="Wrap" FontWeight="SemiBold"
