--- a/DvachBrowser3/Views/Partial/SearchBox.xaml
+++ b/DvachBrowser3/Views/Partial/SearchBox.xaml
@@ -35,7 +35,7 @@
         <Border.RenderTransform>
             <TranslateTransform x:Name="MainBorderTransform"/>
         </Border.RenderTransform>
-        <RelativePanel>
+        <StackPanel>
             <TextBox x:Name="EntryBox" PlaceholderText="Поиск">
                 <interactivity:Interaction.Behaviors>
                     <behaviors:TextBoxChangeDelayBehavior>
@@ -43,8 +43,7 @@
                     </behaviors:TextBoxChangeDelayBehavior>
                 </interactivity:Interaction.Behaviors>
             </TextBox>
-            <Button x:Name="CloseButton" Click="CloseButton_OnClick">Закрыть</Button>
-        </RelativePanel>
+        </StackPanel>
     </Border>
 </UserControl>
 
